WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81994
[chromium] Incorrect assert on animating opacity for a surface
https://bugs.webkit.org/show_bug.cgi?id=81994
Summary
[chromium] Incorrect assert on animating opacity for a surface
Dana Jansens
Reported
2012-03-22 17:01:55 PDT
[chromium] Incorrect assert on animating opacity for a surface
Attachments
Patch
(2.02 KB, patch)
2012-03-22 17:04 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-03-22 17:04:46 PDT
Created
attachment 133389
[details]
Patch
Adrienne Walker
Comment 2
2012-03-22 17:07:06 PDT
Comment on
attachment 133389
[details]
Patch Whoops.
WebKit Review Bot
Comment 3
2012-03-22 19:08:31 PDT
Comment on
attachment 133389
[details]
Patch Clearing flags on attachment: 133389 Committed
r111807
: <
http://trac.webkit.org/changeset/111807
>
WebKit Review Bot
Comment 4
2012-03-22 19:08:35 PDT
All reviewed patches have been landed. Closing bug.
Dana Jansens
Comment 5
2012-03-26 13:44:14 PDT
***
Bug 82239
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug