[chromium] Incorrect assert on animating opacity for a surface https://bugs.webkit.org/show_bug.cgi?id=81994

Patch by Dana Jansens <danakj@chromium.org> on 2012-03-22
Reviewed by Adrienne Walker.

Draw opacity and animation state match on the surface itself. A
surface with animating opacity always has an owning layer without
animation, as the surface does the animation for it.

* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::paintLayerContents):

Canonical link: https://commits.webkit.org/99293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111807 268f45cc-cd09-0410-ab3c-d52691b4dbfc